@@ -9,6 +9,7 @@ Changes in 3.0.2 :
 - Fix crash when unloading plugins with Qt4.4 (160565)
 - Fix update search engines from internet
 - Remove torrentspy and update piratebay URL
+- Fix 4 GB limit in transfer of statusbar (160711)
 
 Changes in 3.0.1 :
 - Fix sessionTTL not being able to be bigger then 99
